--- a/config.toml
+++ b/config.toml
@@ -22,9 +22,7 @@ menu = [
     { name = "Home", url = "", trailing_slash = true },
     { name = "Posts", url = "posts", trailing_slash = true },
     { name = "Projects", url = "projects", trailing_slash = true },
-    { name = "TIL", url = "tils", trailing_slash = true },
-    { name = "Tags", url = "tags", trailing_slash = true },
-    { name = "Contact", url = "contact", trailing_slash = true },
+    # { name = "Tags", url = "tags", trailing_slash = true },
 ]
 # quick_navigation_buttons = true
 show_reading_time = true
