--- a/config.toml
+++ b/config.toml
@@ -7,12 +7,13 @@ generate_feed = true
 minify_html = true
 taxonomies = [{ name = "tags", feed = true }]
 theme = "tabi"
-title = "itstauq.fyi"
+title = "Tauquir Ahmed"
 
 [markdown]
 highlight_code = true
 
 [extra]
+nav_title = "itstauq.fyi"
 copyright = "&copy; $CURRENT_YEAR Tauquir Ahmed $SEPARATOR"
 copy_button = true
 email = 'aGVsbG9AaXRzdGF1cS5meWk='
